--- a/index.html
+++ b/index.html
@@ -190,3 +190,11 @@ We computed the average rating of all categories using the rating of each applic
 <div style="margin-bottom: 5px;">
 <img src="BoxPlot_RatingVSCategory.jpg"> 
 </div>
+
+
+<h1> Final Analysis </h1>
+
+<label>
+
+        We learnt from our data  that there are 33 category and the categories of the top applications mostly installed which are Games and Communication. The aforementioned result was expected as the users mostly search for the type of application that entertain them and help them to connect to other people.  Another finding is that the percentage of installed free apps is 99.9%, however even this percentage is considered high it might be reasonable to us as we found the percentage of free app in our dataset is 99.2% . We used different statistical visualizations to answer our questions like bar and pie charts .
+</label>
